# SLAM_plus_plus

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakeSettings.json  Changelog.txt  License.txt  Readme.txt  calibration_readme.txt  dataset.graph  example.graph
CMakeModules/: FindCULA.cmake
build15/: BA_interface_example.vcxproj  BA_interface_example.vcxproj.filters  BA_marginals_example.vcxproj  BA_marginals_example.vcxproj.filters  BA_parameter_acra.vcxproj  BA_parameter_acra.vcxproj.filters  CSparse3.vcxproj  CSparse3.vcxproj.filters  CXSparse.vcxproj  CXSparse.vcxproj.filters  Cholmod.vcxproj  Cholmod.vcxproj.filters  DTL.cpp  Readme.txt  SLAM_Schur_orderings.vcxproj  SLAM_Schur_orderings.vcxproj.filters  SLAM_compact_pose_example.vcxproj  SLAM_compact_pose_example.vcxproj.filters  SLAM_compact_pose_ijrr.vcxproj  SLAM_compact_pose_ijrr.vcxproj.filters  SLAM_dataassoc_example.vcxproj  SLAM_dataassoc_example.vcxproj.filters  SLAM_online_example.vcxproj  SLAM_online_example.vcxproj.filters  SLAM_plus_plus.sln  SLAM_plus_plus.vcxproj  SLAM_plus_plus.vcxproj.filters  SLAM_simple_example.vcxproj  SLAM_simple_example.vcxproj.filters  SLAMpp_base.vcxproj  SLAMpp_base.vcxproj.filters  SparseFLOPs.vcxproj  SparseFLOPs.vcxproj.filters  eigen3.vcxproj  eigen3.vcxproj.filters  eigen32.vcxproj  geometry_example.vcxproj  geometry_example.vcxproj.filters  igraph.vcxproj  (+5 more)
include/: CMakeLists.txt
include/ba_interface_example/: BAOptimizer.h  CMakeLists.txt
include/ba_parameter_acra/: BAOptimizer.h  Sim3_ParsePrimitives.h
include/cholmod/: CMakeLists.txt  cholmod_blas.h
include/cholmod/CAMD/: camd_internal.h
include/cholmod/CCOLAMD/: CMakeLists.txt
include/cholmod/GKlib/: gk_arch.h
include/cholmod/METIS/: metis.h
include/csparse/: CMakeLists.txt  cs.hpp
include/cxsparse/: CMakeLists.txt  cxs.hpp
include/eigen32/eigen/: CMakeLists.txt
include/eigen32/unsupported/Eigen/: MatrixFunctions
include/eigen33/: CMakeLists.txt
include/eigen33/eigen/: Eigen-3.3.txt
include/eigen33/eigen/Eigen/src/Core/: Ref.h
include/eigen33/eigen/Eigen/src/Core/arch/SSE/: Complex.h  PacketMath.h
include/eigen33/eigen/Eigen/src/Core/util/: Memory.h
include/eigen33/eigen/Eigen/src/Geometry/: Quaternion.h
include/eigen33/unsupported/Eigen/: MatrixFunctions  SpecialFunctions
include/eigen33/unsupported/Eigen/CXX11/: Tensor
include/geometry/: CMakeLists.txt  DistortionModel.h  Homography.h  Homography.inl  Kabsch.h  P3P.h  PolySolve.h  Polynomial.h  RobustLoss.h  StructAverage.h  Triangulate.h  TwoView.h
include/incremental_ba_3dv/: BAOptimizer.h
include/midend/: Structures.h
include/slam/: 2DSolverBase.h  3DSolverBase.h  BAMarginals.h  BASolverBase.h  BA_Types.h  BaseInterface.h  BaseTypes.h  BaseTypes_Binary.h  BaseTypes_Unary.h  Bitmap.h  BlockMatrix.h  BlockMatrix.inl  BlockMatrixBase.h  BlockMatrixFBS.h  BlockMatrixFBS.inl  BlockMatrixFBSUtil.h  BlockMatrixTests.h  BlockMatrixVBR.h  ConfigSolvers.h  Debug.h  Derivatives.h  Distances.h  Eigenvalues.h  Eigenvalues.inl  ErrorEval.h  FlatSystem.h  IncrementalPolicy.h  Integer.h  LinearSolverTags.h  LinearSolver_CSparse.h  LinearSolver_CXSparse.h  LinearSolver_CholMod.h  LinearSolver_Schur.h  LinearSolver_UberBlock.h  Marginals.h  MemUsage.h  NonlinearSolver_A.h  NonlinearSolver_Base.h  NonlinearSolver_FastL.h  NonlinearSolver_FastL_Base.h  (+25 more)
include/slam_app/: BlockBench.h  BlockUnit.h  CMakeLists.txt  Config.h  IncBAParsePrimitives.h  Main.h  ParsePrimitives.h
include/sparse_flops/: Instrument.h  cs.h  cs_add_patched.inl  cs_multiply_patched.inl  cs_util_patched.inl  cts.hpp
src/: CMakeLists.txt
src/ba_interface_example/: BAOptimizer.cpp  CMakeLists.txt  Main.cpp
src/ba_marginals_example/: CMakeLists.txt  Main.cpp
src/ba_parameter_acra/: BAOptimizer.cpp  CMakeLists.txt  MainL.cpp
src/cholmod/: CMakeLists.txt
src/cholmod/CAMD_DLONG/: CMakeLists.txt
src/cholmod/CHOLMOD/Partition/: cholmod_metis.c
src/cholmod/GKlib/: string.c
src/cholmod/METIS/: parmetis.c
src/csparse/: CMakeLists.txt  cs_add.c  cs_amd.c  cs_chol.c  cs_cholsol.c  cs_compress.c  cs_counts.c  cs_dupl.c  cs_etree.c  cs_lu.c  cs_lusol.c  cs_maxtrans.c  cs_multiply.c  cs_pinv.c  cs_post.c  cs_qr.c  cs_qrsol.c  cs_randperm.c  cs_scc.c  cs_schol.c  cs_sqr.c  cs_symperm.c  cs_transpose.c  cs_updown.c  cs_util.c
src/cxsparse/: CMakeLists.txt  cs_add.c  cs_amd.c  cs_chol.c  cs_cholsol.c  cs_compress.c  cs_convert.c  cs_counts.c  cs_cumsum.c  cs_dfs.c  cs_dmperm.c  cs_droptol.c  cs_dropzeros.c  cs_dupl.c  cs_entry.c  cs_ereach.c  cs_etree.c  cs_fkeep.c  cs_gaxpy.c  cs_happly.c  cs_house.c  cs_ipvec.c  cs_leaf.c  cs_load.c  cs_lsolve.c  cs_ltsolve.c  cs_lu.c  cs_lusol.c  cs_malloc.c  cs_maxtrans.c  cs_multiply.c  cs_norm.c  cs_permute.c  cs_pinv.c  cs_post.c  cs_print.c  cs_pvec.c  cs_qr.c  cs_qrsol.c  cs_randperm.c  (+13 more)
src/eigen32/: CMakeLists.txt  Eigen-3.2.txt
src/eigen33/: CMakeLists.txt
src/geometry_example/: CMakeLists.txt  Main.cpp
src/incremental_ba_3dv/: BAOptimizer.cpp  CMakeLists.txt  Main.cpp
src/midend_example/: CMakeLists.txt  Main.cpp
src/poly_fitting_example/: CMakeLists.txt  Main.cpp
src/slam/: BlockMatrix.cpp  BlockMatrixTests.cpp  CMakeLists.txt  Debug.cpp  Eigenvalues.cpp  LinearSolver_CSparse.cpp  LinearSolver_CXSparse.cpp  LinearSolver_CholMod.cpp  LinearSolver_Schur.cpp  LinearSolver_Schur_GPU.cpp  OrderingMagic.cpp  Parser.cpp  SE3_Types.cpp  Tags.cpp  Tga.cpp  Timer.cpp
src/slam_app/: BlockBench.cpp  BlockBenchImpl0.cpp  BlockBenchImpl1.cpp  BlockUnit.cpp  CMakeLists.txt  Covado.cpp  Main.cpp  Solve2DImpl.cpp  Solve2DPoseOnlyImpl.cpp  Solve3DImpl.cpp  Solve3DPoseOnlyImpl.cpp  SolveBAImpl.cpp  SolveBAIntrinsicsImpl.cpp  SolveBAStereoImpl.cpp  SolveROCVImpl.cpp  SolveSpheronImpl.cpp
src/slam_compact_pose_example/: CMakeLists.txt  Main.cpp
src/slam_compact_pose_ijrr/: CMakeLists.txt  Main.cpp
src/slam_dataassoc_example/: CMakeLists.txt  Main.cpp
src/slam_online_example/: CMakeLists.txt  Main.cpp
src/slam_schur_orderings/: CMakeLists.txt  Main.cpp
src/slam_simple_example/: CMakeLists.txt  Main.cpp
(+150 files in other folders)
