ADD_SUBDIRECTORY(csparse)
IF(SLAM_P_P_EIGEN33)
	ADD_SUBDIRECTORY(eigen33)
ELSE(SLAM_P_P_EIGEN33)
	ADD_SUBDIRECTORY(eigen32)
ENDIF(SLAM_P_P_EIGEN33)
ADD_SUBDIRECTORY(cholmod)
ADD_SUBDIRECTORY(cxsparse)
ADD_SUBDIRECTORY(slam)
IF(SLAM_P_P_BUILD_MAIN_APP)
	ADD_SUBDIRECTORY(slam_app)
ENDIF(SLAM_P_P_BUILD_MAIN_APP)
IF(SLAM_P_P_BUILD_EXAMPLES)
	ADD_SUBDIRECTORY(slam_simple_example)
	ADD_SUBDIRECTORY(poly_fitting_example)
	ADD_SUBDIRECTORY(slam_online_example)
	ADD_SUBDIRECTORY(slam_dataassoc_example)
	ADD_SUBDIRECTORY(slam_compact_pose_example)
	ADD_SUBDIRECTORY(slam_compact_pose_ijrr)
	ADD_SUBDIRECTORY(ba_interface_example)
	ADD_SUBDIRECTORY(ba_marginals_example)
	ADD_SUBDIRECTORY(ba_parameter_acra)
	ADD_SUBDIRECTORY(slam_schur_orderings)
	ADD_SUBDIRECTORY(geometry_example)
	ADD_SUBDIRECTORY(incremental_ba_3dv)
ENDIF(SLAM_P_P_BUILD_EXAMPLES)
IF(SLAM_P_P_BUILD_TOMS_EXAMPLE)
	#ADD_SUBDIRECTORY(matrix_perf_toms)
ENDIF(SLAM_P_P_BUILD_TOMS_EXAMPLE)
