ADD_SUBDIRECTORY(AMD)
ADD_SUBDIRECTORY(CAMD)
ADD_SUBDIRECTORY(CCOLAMD)
ADD_SUBDIRECTORY(COLAMD)
ADD_SUBDIRECTORY(SuiteSparse)
ADD_SUBDIRECTORY(METIS)
FILE(GLOB_RECURSE CHOLMOD_LIBRARY_HEADERS *.h
  AMD/*.h
  CAMD/*.h
  CCOLAMD/*.h
  COLAMD/*.h
  SuiteSparse/*.h
  GKlib/*.h
  METIS/*.h)
